RESOLVED FIXED29675
[Qt] Crash in QWebHistory back and forward functions
https://bugs.webkit.org/show_bug.cgi?id=29675
Summary [Qt] Crash in QWebHistory back and forward functions
Jędrzej Nowacki
Reported 2009-09-23 04:04:39 PDT
QWebHistory::back() and QWebHistory::forward() are crashing on ASSERT in WebCore::BackForwardList. How to reproduce: while(history->canGoBack()) history->back(); history->back(); <----this will crash
Attachments
Proposed path (1.82 KB, patch)
2009-09-23 04:12 PDT, Jędrzej Nowacki
no flags
Jędrzej Nowacki
Comment 1 2009-09-23 04:12:57 PDT
Created attachment 39986 [details] Proposed path
Simon Hausmann
Comment 2 2009-09-23 14:41:52 PDT
Comment on attachment 39986 [details] Proposed path r=me, thanks.
WebKit Commit Bot
Comment 3 2009-09-23 17:47:58 PDT
Comment on attachment 39986 [details] Proposed path Clearing flags on attachment: 39986 Committed r48691: <http://trac.webkit.org/changeset/48691>
WebKit Commit Bot
Comment 4 2009-09-23 17:48:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.