2009-09-23  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Crash fix in QWebHistory back and forward methods.

        QWebHistory::back() and QWebHistory::forward() were crashing on
        ASSERT in WebCore::BackForwardList. The methods should check
        canGoBack() and canGoForward() at the beginning.

        https://bugs.webkit.org/show_bug.cgi?id=29675

        * Api/qwebhistory.cpp:
        (QWebHistory::back):
        (QWebHistory::forward):

Canonical link: https://commits.webkit.org/40254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48691 268f45cc-cd09-0410-ab3c-d52691b4dbfc